# next-auth

./: .env  docker-compose.yaml  package.json
.github/workflows/: build-push.yaml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 400f39737b6d_update_datetime_fields_to_timezone_aware.py  75aa90ee9e20_create_user_table.py  e6ae2d9f0694_update_is_active_col_to_status.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  dependency.py
backend/app/core/certs/: private_key.pem  public_key.pem
backend/app/core/security/: jwt.py  password.py
backend/app/database/: base.py  session.py
backend/app/middleware/: setup.py
backend/app/models/: __init__.py  user.py
backend/app/routers/: auth_router.py
backend/app/schemas/: user_auth.py
backend/app/services/oauth/: github.py  google.py
backend/app/utils/: set_cookie.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/actions/: setOauthToken.ts
frontend/src/app/profile/: layout.tsx  page.tsx
frontend/src/components/auth/: formInput.tsx  logoutButton.tsx  oauthButton.tsx  submitButton.tsx  withAuth.tsx
frontend/src/components/common/: hydrate.tsx
frontend/src/components/providers/: tanstackQueryProvider.tsx
frontend/src/lib/: const.ts  redis.ts
frontend/src/store/: authStore.ts
frontend/src/types/: auth.ts
frontend/src/utils/: axios.ts
(+7 files in other folders)
