[tool.poetry]
name = "oauth-backend"
version = "0.1.0"
description = ""
authors = ["hojiakbar2806 <hojiakbarnasriddinov2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
alembic = "^1.14.1"
pydantic = {extras = ["email"], version = "^2.10.6"}
python-dotenv = "^1.0.1"
pyjwt = "^2.10.1"
passlib = "1.7.4"
celery = "^5.4.0"
aiohttp = "^3.11.11"
pydantic-settings = "^2.7.1"
httpx = "^0.28.1"
aiosmtplib = "^3.0.2"
flower = "^2.0.1"
redis = "^5.2.1"
pwdlib = "^0.2.1"
cryptography = "^44.0.0"
bcrypt = "4.0.1"
authlib = "^1.4.1"
starlette = "^0.45.3"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
